# Imputation

./: encoder.py  gain.py  new_dae.py  pyproject.toml
.venv-test/: pyvenv.cfg
df2/: coldeck.py  constant.py  df_0.2.csv  forest.py  hotdeck.py  knn.py  linear_interpolation.py  locf.py  mean.py  median.py  mice.py  mode.py  nocb.py  polinomial_interpolation.py  rand.py  reg.py  spline_interpolation.py  try.py
df3/: df_0.3.csv
df4/: df_0.4.csv
df5/: df_0.5.csv
