[tool.poetry]
name = "imputation"
version = "0.1.0"
description = ""
authors = ["Naufal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
fancyimpute = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
